4/1,2/twoservices.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: client-a
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: client-b
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
